# HelloGLFW

./: .gitignore  CMakeLists.txt  README.md
include/: Camera.hpp  ShaderProgram.h  tools.hpp
shaders/: fragment.frag  vertex.vert
src/: Camera.cpp  ShaderProgram.cpp  main.cpp  tools.cpp
